# server/src/main/java/at/bestsolution/quti/rest/model/DateTimeRangeDataImpl.java
@@ -1,0 +1,60 @@
+// Generated by RSD - Do not modify
+package at.bestsolution.quti.rest.model;
+
+import java.time.ZonedDateTime;
+
+import jakarta.json.Json;
+import jakarta.json.JsonObject;
+import jakarta.json.JsonObjectBuilder;
+
+import at.bestsolution.quti.service.model.DateTimeRange;
+
+public class DateTimeRangeDataImpl extends _BaseDataImpl implements DateTimeRange.Data {
+	DateTimeRangeDataImpl(JsonObject data) {
+		super(data);
+	}
+
+	public ZonedDateTime min() {
+		return _JsonUtils.mapZonedDateTime(data, "min", null);
+	}
+
+	public ZonedDateTime max() {
+		return _JsonUtils.mapZonedDateTime(data, "max", null);
+	}
+
+	public static DateTimeRange.Data of(JsonObject obj) {
+		return new DateTimeRangeDataImpl(obj);
+	}
+
+	public String toString() {
+		return getClass().getSimpleName();
+	}
+
+	public static class DataBuilderImpl implements DateTimeRange.DataBuilder {
+		private JsonObjectBuilder $builder = Json.createObjectBuilder();
+
+		public DateTimeRange.DataBuilder min(ZonedDateTime min) {
+			if (min == null) {
+				return this;
+			}
+			$builder.add("min", min.toString());
+			return this;
+		}
+
+		public DateTimeRange.DataBuilder max(ZonedDateTime max) {
+			if (max == null) {
+				return this;
+			}
+			$builder.add("max", max.toString());
+			return this;
+		}
+
+		public DateTimeRange.Data build() {
+			return new DateTimeRangeDataImpl($builder.build());
+		}
+	}
+
+	public static DateTimeRange.DataBuilder builder() {
+		return new DataBuilderImpl();
+	}
+}
